sumo/tests/dfrouter/errors/detector_files/false_detectors_file1/options.dfrouter
--net-file=input_messstrecke.net.xml --detector-files=xxx.det.xml --detectors-output detectors_def.det.xml

